--- a/src/assets/fonts/style.css
+++ b/src/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nkkmfb');
-  src:  url('fonts/icomoon.eot?nkkmfb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nkkmfb') format('truetype'),
-    url('fonts/icomoon.woff?nkkmfb') format('woff'),
-    url('fonts/icomoon.svg?nkkmfb#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?1rpcg2');
+  src:  url('fonts/icomoon.eot?1rpcg2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?1rpcg2') format('truetype'),
+    url('fonts/icomoon.woff?1rpcg2') format('woff'),
+    url('fonts/icomoon.svg?1rpcg2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,57 +25,63 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-mute:before {
+.icon-grid:before {
   content: "\e900";
 }
-.icon-play-next:before {
+.icon-item:before {
   content: "\e901";
 }
-.icon-pause:before {
+.icon-mute:before {
   content: "\e902";
 }
-.icon-play:before {
+.icon-play-next:before {
   content: "\e903";
 }
-.icon-to-play:before {
+.icon-pause:before {
   content: "\e904";
 }
-.icon-webfull-on:before {
+.icon-play:before {
   content: "\e905";
 }
-.icon-settimg:before {
+.icon-to-play:before {
   content: "\e906";
 }
-.icon-full-screen:before {
+.icon-webfull-on:before {
   content: "\e907";
+}
+.icon-setting:before {
+  content: "\e908";
+}
+.icon-full-screen:before {
+  content: "\e909";
   color: #fff;
 }
 .icon-wide-on:before {
-  content: "\e908";
-}
-.icon-webfull-off:before {
-  content: "\e909";
-}
-.icon-wide-off:before {
   content: "\e90a";
 }
-.icon-volume:before {
+.icon-webfull-off:before {
   content: "\e90b";
+}
+.icon-wide-off:before {
+  content: "\e90c";
+}
+.icon-volume:before {
+  content: "\e90d";
 }
 .icon-anime:before {
   content: "\e91c";
 }
 .icon-danmu-count:before {
-  content: "\e90c";
+  content: "\e90e";
 }
 .icon-arrow-down:before {
-  content: "\e90d";
-}
-.icon-arrow-left:before {
   content: "\e90f";
 }
-.icon-toggle:before {
+.icon-arrow-left:before {
   content: "\e910";
+}
+.icon-toggle:before {
+  content: "\e911";
 }
 .icon-play-count:before {
   content: "\e912";
@@ -90,23 +96,23 @@
   content: "\e916";
 }
 .icon-game:before {
-  content: "\e911";
-}
-.icon-history-play:before {
   content: "\e914";
 }
-.icon-home:before {
+.icon-history-play:before {
   content: "\e917";
 }
-.icon-movie:before {
+.icon-home:before {
   content: "\e918";
 }
-.icon-later-play:before {
+.icon-movie:before {
   content: "\e919";
 }
-.icon-collection:before {
+.icon-later-play:before {
   content: "\e91a";
 }
-.icon-subscribe:before {
+.icon-collection:before {
   content: "\e91b";
+}
+.icon-subscribe:before {
+  content: "\e91d";
 }
