--- a/src/assets/fonts/style.css
+++ b/src/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?1rpcg2');
-  src:  url('fonts/icomoon.eot?1rpcg2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?1rpcg2') format('truetype'),
-    url('fonts/icomoon.woff?1rpcg2') format('woff'),
-    url('fonts/icomoon.svg?1rpcg2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?4ssxw6');
+  src:  url('fonts/icomoon.eot?4ssxw6#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?4ssxw6') format('truetype'),
+    url('fonts/icomoon.woff?4ssxw6') format('woff'),
+    url('fonts/icomoon.svg?4ssxw6#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-ellipsis:before {
+  content: "\e91e";
+}
 .icon-grid:before {
   content: "\e900";
 }
