--- a/src/assets/fonts/style.css
+++ b/src/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4ssxw6');
-  src:  url('fonts/icomoon.eot?4ssxw6#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4ssxw6') format('truetype'),
-    url('fonts/icomoon.woff?4ssxw6') format('woff'),
-    url('fonts/icomoon.svg?4ssxw6#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?326pd8');
+  src:  url('fonts/icomoon.eot?326pd8#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?326pd8') format('truetype'),
+    url('fonts/icomoon.woff?326pd8') format('woff'),
+    url('fonts/icomoon.svg?326pd8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-delete:before {
+  content: "\e921";
+}
+.icon-search:before {
+  content: "\e920";
+}
+.icon-checked:before {
+  content: "\e91c";
+}
 .icon-ellipsis:before {
   content: "\e91e";
 }
@@ -72,7 +81,7 @@
   content: "\e90d";
 }
 .icon-anime:before {
-  content: "\e91c";
+  content: "\e91f";
 }
 .icon-danmu-count:before {
   content: "\e90e";
